--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.3",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
