--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "mongoose": "^8.2.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "sharp": "^0.33.2",
     "slugify": "^1.6.6",
     "uuid": "^9.0.1"
